; ModuleID = '/home/carl/AnghaBench/reactos/hal/halx86/mp/extr_ioapic.c_IRQPolarity.c'
source_filename = "/home/carl/AnghaBench/reactos/hal/halx86/mp/extr_ioapic.c_IRQPolarity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@IRQMap = common dso_local global %struct.TYPE_2__* null, align 8
@BUSMap = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"Broken BIOS!!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @IRQPolarity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @IRQPolarity(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @IRQMap, align 8
  %6 = load i64, i64* %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 %6
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  store i64 %9, i64* %3, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @IRQMap, align 8
  %11 = load i64, i64* %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = and i32 %14, 3
  switch i32 %15, label %40 [
    i32 0, label %16
    i32 1, label %36
    i32 2, label %37
    i32 3, label %39
  ]

16:                                               ; preds = %1
  %17 = load i32*, i32** @BUSMap, align 8
  %18 = load i64, i64* %3, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  switch i32 %20, label %33 [
    i32 130, label %21
    i32 131, label %24
    i32 128, label %27
    i32 129, label %30
  ]

21:                                               ; preds = %16
  %22 = load i64, i64* %2, align 8
  %23 = call i64 @default_ISA_polarity(i64 %22)
  store i64 %23, i64* %4, align 8
  br label %35

24:                                               ; preds = %16
  %25 = load i64, i64* %2, align 8
  %26 = call i64 @default_EISA_polarity(i64 %25)
  store i64 %26, i64* %4, align 8
  br label %35

27:                                               ; preds = %16
  %28 = load i64, i64* %2, align 8
  %29 = call i64 @default_PCI_polarity(i64 %28)
  store i64 %29, i64* %4, align 8
  br label %35

30:                                               ; preds = %16
  %31 = load i64, i64* %2, align 8
  %32 = call i64 @default_MCA_polarity(i64 %31)
  store i64 %32, i64* %4, align 8
  br label %35

33:                                               ; preds = %16
  %34 = call i32 @DPRINT(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i64 1, i64* %4, align 8
  br label %35

35:                                               ; preds = %33, %30, %27, %24, %21
  br label %42

36:                                               ; preds = %1
  store i64 0, i64* %4, align 8
  br label %42

37:                                               ; preds = %1
  %38 = call i32 @DPRINT(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i64 1, i64* %4, align 8
  br label %42

39:                                               ; preds = %1
  store i64 1, i64* %4, align 8
  br label %42

40:                                               ; preds = %1
  %41 = call i32 @DPRINT(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i64 1, i64* %4, align 8
  br label %42

42:                                               ; preds = %40, %39, %37, %36, %35
  %43 = load i64, i64* %4, align 8
  ret i64 %43
}

declare dso_local i64 @default_ISA_polarity(i64) #1

declare dso_local i64 @default_EISA_polarity(i64) #1

declare dso_local i64 @default_PCI_polarity(i64) #1

declare dso_local i64 @default_MCA_polarity(i64) #1

declare dso_local i32 @DPRINT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
